[package]
edition = "2021"
name = "agentic_rwa"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.2", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.2", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", default-features = false }

[lib]
name = "agentic_rwa"
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-cli = { version = "2.8.2", default-features = false }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[[bin]]
name = "agentic_rwa_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "agentic_rwa_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "agentic_rwa_cli"
path = "bin/cli.rs"
test = false

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]
test = false
